# Proyecto-Horario

./: .gitignore  README.md  database.json  main.py  pyproject.toml
src/: administrador.py  constantes.py  database.py  estudiante.py  modelos.py  profesor.py
