[project]
name = "proyecto-horario"
version = "0.1.0"
description = "Proyecto estudiantil de la UNEFA 4to semestre, cates de programación"
authors = [
    {name = "Yeiderson Sequera",email = "adonayyeidersonparedes@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "readchar (>=4.2.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
